--- a/source/stylus/backgrounds.styl
+++ b/source/stylus/backgrounds.styl
@@ -1,16 +1,14 @@
 .app-background
 	@extends .layer
 	background linear-gradient(to right , #ECC0AA, #EDB5F8)
-
 	#bg-animation
 		absolute top left right bottom
 		z-index 10
 
+
 .app-logo
 	font-size 24px
 	absolute top 50% left 50%
-	width 200px
-	height 200px
 	margin-left -100px
 	margin-top -100px
 	text-align center
@@ -21,6 +19,7 @@
 		font-size 48px
 
 	.btn.btn-default
+		display none
 		font-size 18px
 		background none
 		border-color rgba(#fff, 0.8)
