--- a/source/templates/loading.jade
+++ b/source/templates/loading.jade
@@ -2,6 +2,6 @@
 	.text-center
 		.title MUSE UI
 		.spinner
-		a.btn.btn-default(href='home') 
+		button.btn.btn-default.navigate-home
 			| Skip &nbsp;&nbsp;
 			i.fa.fa-angle-right
