--- a/source/stylus/header.styl
+++ b/source/stylus/header.styl
@@ -17,15 +17,13 @@
 			display block
 			padding 8px 10px
 			color rgba(#fff, 0.75)
-			border 1px rgba(#fff, 0.65) solid
 			border-radius 2px
 			cursor pointer
-			background-color rgba(#fff, 0.2)
 			transition all .15s ease-in-out
 			&:hover, &:active
-				background-color rgba(#fff, 1)
+				background-color rgba(#fff, 0.2)
+			&:active
 				color color_blue
-				box-shadow 0px 2px 8px 0 rgba(#000, 0.15) 
 
 	.header-item
 		padding 15px 0
