--- a/source/stylus/layers.styl
+++ b/source/stylus/layers.styl
@@ -10,6 +10,7 @@ body
 .app-content
 	@extends .layer
 	z-index 100
+	padding-top 60px
 
 .loader-circle
 	relative left 50%
@@ -30,7 +31,6 @@ body
 
 .loader
 	animation-delay 0.3s
-	
 	&:after, &:before	
 		content ''
 	&:after
@@ -42,88 +42,66 @@ body
 @keyframes loader-anim
 	0%, 45%, 90%, 100%
 		opacity 1
-		
 	15%, 75%
 		opacity round(sin(30), 2)
-		
 	30%, 60%
 		opacity round(sin(60), 2)
 
+.spinner
+	position relative
+	margin  auto
+	margin-bottom 40px
+	box-sizing border-box
+	background-clip padding-box
+	width 256px
+	height 256px
+	border-radius 50%
+	border 6px solid rgba(255, 255, 255, 0.1)
+	-webkit-mask linear-gradient(rgba(0, 0, 0, 0.1), #000000 90%)
+	transform-origin 50% 60%
+	transform perspective(256px) rotateX(66deg)
+	animation spinner-wiggle 1.2s infinite
 
-.spinner {
-  position: relative;
-  margin: auto;
-  margin-bottom: 20px;
-  box-sizing: border-box;
-  background-clip: padding-box;
-  width: 128px;
-  height: 128px;
-  border-radius: 100px;
-  border: 4px solid rgba(255, 255, 255, 0.1);
-  -webkit-mask: linear-gradient(rgba(0, 0, 0, 0.1), #000000 90%);
-  transform-origin: 50% 60%;
-  transform: perspective(128px) rotateX(66deg);
-  animation: spinner-wiggle 1.2s infinite;
-}
+.spinner:before, .spinner:after 
+	content: ''
+	position absolute
+	margin -6px
+	box-sizing inherit
+	width inherit
+	height inherit
+	border-radius inherit
+	background-clip padding-box
+	-webkit-mask linear-gradient(rgba(0,0,0,0.5), #000 80%)
+	opacity .05
+	border inherit
+	border-color transparent
+	animation spinner-spin 1.2s cubic-bezier(0.6, 0.2, 0, 0.8) infinite, spinner-fade 1.2s linear infinite
 
-@keyframes spinner-wiggle {
-  30% {
-    transform: perspective(128px) rotateX(66deg);
-  }
+.spinner:before
+	border-top-color rgba(theme_base, 0.65)
 
-  40% {
-    transform: perspective(128px) rotateX(65deg);
-  }
+.spinner:after
+	border-top-color rgba(theme_base, 0.65)
+	animation-delay  0.3s
 
-  50% {
-    transform: perspective(128px) rotateX(68deg);
-  }
+@keyframes spinner-wiggle
+	30%
+		transform: perspective(256px) rotateX(66deg)
+	40%
+		transform: perspective(256px) rotateX(65deg)
+	50%
+		transform: perspective(256px) rotateX(68deg)
+	60%
+		transform: perspective(256px) rotateX(64deg)
 
-  60% {
-    transform: perspective(128px) rotateX(64deg);
-  }
-}
-.spinner:before,
-.spinner:after {
-  content: "";
-  position: absolute;
-  margin: -4px;
-  box-sizing: inherit;
-  width: inherit;
-  height: inherit;
-  border-radius: inherit;
-  background-clip: padding-box;
-  -webkit-mask: linear-gradient(rgba(0,0,0,0.5), #000 80%)
-  opacity: .05;
-  border: inherit;
-  border-color: transparent;
-  animation: spinner-spin 1.2s cubic-bezier(0.6, 0.2, 0, 0.8) infinite, spinner-fade 1.2s linear infinite;
-}
+@keyframes spinner-spin
+	100%
+		transform rotate(360deg)
 
-.spinner:before {
-  border-top-color: rgba(theme_base, 0.65);
-}
-
-.spinner:after {
-  border-top-color: rgba(theme_base, 0.65);
-  animation-delay: 0.3s;
-}
-
-@keyframes spinner-spin {
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes spinner-fade {
-  20% {
-    opacity: .1;
-  }
-
-  40% {
-    opacity: 1;
-  }
-
-  60% {
-    opacity: .1;
-  }
-}
+@keyframes spinner-fade
+	20%
+		opacity .1
+	40%
+		opacity  1
+	60%
+		opacity .1
